--- a/ArtWork AR/Base.lproj/Main.storyboard
+++ b/ArtWork AR/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FXV-W9-Kie" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1066" y="555"/>
+            <point key="canvasLocation" x="-1122" y="910"/>
         </scene>
         <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
@@ -309,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K77-md-exK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1620" y="162"/>
+            <point key="canvasLocation" x="897" y="-1099"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="vRa-AW-wKn">
@@ -432,7 +432,53 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FaS-bJ-b9K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4461.6000000000004" y="162.3688155922039"/>
+            <point key="canvasLocation" x="1991" y="134"/>
+        </scene>
+        <!--AR-->
+        <scene sceneID="ewa-EN-XZv">
+            <objects>
+                <viewController id="s2x-yd-4mB" customClass="exhibitVC" customModule="ArtWork_AR" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LbT-7g-LXJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gKc-2c-dk0" userLabel="labelView">
+                                <rect key="frame" x="19" y="20" width="340" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP ON SCREEN TO ADD YOUR ART" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D50-aD-whV">
+                                        <rect key="frame" x="-17" y="12" width="374" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XYw-W2-vtv" customClass="CircleMenu" customModule="CircleMenu">
+                                <rect key="frame" x="163" y="313" width="49" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="add"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="buttonsCount">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="rxs-7W-0W6"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="AR" image="ar" id="0BN-Kg-3Fb"/>
+                    <connections>
+                        <outlet property="InfoLabel" destination="D50-aD-whV" id="61J-JL-xTD"/>
+                        <outlet property="addButton" destination="XYw-W2-vtv" id="lxy-3j-6es"/>
+                        <outlet property="labelView" destination="gKc-2c-dk0" id="ZHT-R5-IR8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yH6-gT-ken" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1989.5999999999999" y="966.56671664167925"/>
         </scene>
         <!--View-->
         <scene sceneID="U9j-Gz-0GS">
@@ -443,7 +489,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cJW-z9-rKs">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hCB-7G-ekN">
                                 <rect key="frame" x="167" y="568.5" width="40" height="40"/>
@@ -482,7 +528,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hxn-Qn-XIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2239" y="1055"/>
+            <point key="canvasLocation" x="4063" y="1278"/>
         </scene>
         <!--Setting-->
         <scene sceneID="oDA-XV-imM">
@@ -555,7 +601,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OFz-Jd-ej1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3805.5999999999999" y="1054.7226386806597"/>
+            <point key="canvasLocation" x="1990" y="1760"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7Rx-Ba-tWS">
@@ -569,13 +615,13 @@
                     </tabBar>
                     <connections>
                         <segue destination="TNl-1U-MZI" kind="relationship" relationship="viewControllers" id="MVD-80-vPa"/>
-                        <segue destination="Y8X-9X-Vhs" kind="relationship" relationship="viewControllers" id="SgZ-DF-0E9"/>
+                        <segue destination="s2x-yd-4mB" kind="relationship" relationship="viewControllers" id="oM4-Sd-B6f"/>
                         <segue destination="kaR-oS-th7" kind="relationship" relationship="viewControllers" id="Hlb-P5-hb6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iu3-Kf-jWE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="1112"/>
+            <point key="canvasLocation" x="1225" y="910"/>
         </scene>
     </scenes>
     <resources>
@@ -591,6 +637,7 @@
         <image name="user" width="40" height="40"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="ORg-fb-L2Z"/>
         <segue reference="1af-cc-Msx"/>
     </inferredMetricsTieBreakers>
 </document>
